--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-ejs-extend": "0.0.1",
+    "express-session": "^1.17.0",
     "firebase": "^7.6.1",
     "firebase-admin": "^8.9.0",
     "http-errors": "~1.6.3",
