--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "firebase": "^7.6.1",
     "firebase-admin": "^8.9.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "moment": "^2.24.0",
+    "morgan": "~1.9.1",
+    "striptags": "^3.1.1"
   }
 }
