--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.1",
     "firebase": "^7.6.1",
     "firebase-admin": "^8.9.0",
     "http-errors": "~1.6.3",
